Fix duplicate icons #3636
-Using common icons from lib-admin-ui in the first place
-Removed all duplicated icons from icomoon-studio-lib (those overlapping with lib-admin-ui) and updated .ts classes to use common ones
-Left empty icomoon-studio-app fonts (since all required icons exist in icomoon-studio-lib) for future use
-Moved archive icon into icomoon-studio-lib and added box-remove icon as icon-box-remove for using in versions history

--- a/modules/app/src/main/resources/assets/page-editor/styles/partials/page-view.less
+++ b/modules/app/src/main/resources/assets/page-editor/styles/partials/page-view.less
@@ -19,8 +19,7 @@
       .page-placeholder-info {
         position: relative;
 
-        &:not(.empty) {
-          .icon-page-template();
+        &:not(.empty)
 
           &::before {
             display: block;
